# notes2vec

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.cursor/: literature.mdc  project_description.mdc
.cursor/memory_bank/: active_context.mdc  memory_bank.mdc  product_context.mdc  progress.mdc  project_brief.mdc  system_patterns.mdc  tech_context.mdc
.github/workflows/: release.yml
assets/: ascii-art.txt
notes/: memory-management.md  parallisim.md  security-practices.md  team-collaboration.md
src/: cli.rs  config.rs  discovery.rs  error.rs  lib.rs  main.rs  model.rs  parser.rs  state.rs  vectors.rs
src/core/: config.rs  error.rs  mod.rs
src/indexing/: discovery.rs  mod.rs  parser.rs
src/search/: model.rs
src/storage/: mod.rs  state.rs  vectors.rs
src/ui/: cli.rs  mod.rs  tui.rs  watch.rs
src/ui/tui/: search.rs
test_notes/: example.md
tests/: functionality_test.rs  integration_test.rs  real_file_test.rs  unit_test.rs  watch_test.rs
