[package]
name = "notes2vec"
version = "0.1.0"
edition = "2021"
authors = ["AbdulmalikDS <af.alquwayfili@gmail.com>"]
description = "A lightweight, local-first semantic search engine for personal notes"
license = "MIT"
repository = "https://github.com/AbdulmalikDS/notes2vec"
keywords = ["search", "semantic", "notes", "vector", "embeddings"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
# CLI Framework
clap = { version = "4.5", features = ["derive"] }

# TUI Interface
ratatui = "0.27"

# File System Operations
notify-debouncer-full = "0.3"
ignore = "0.4"

# Text Processing
pulldown-cmark = "0.10"
semchunk-rs = "0.1"
markdown-frontmatter = "0.1"

# Machine Learning & Embeddings
candle-core = "0.4"
candle-transformers = "0.4"
candle-nn = "0.4"
hf-hub = "0.3"

# Vector Database
lancedb = "0.8"
arrow = "57"

# State Management
redb = "1.3"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Parallel Processing
rayon = "1.10"

# Utilities
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "notes2vec"
path = "src/main.rs"

