[package]
name = "notes2vec"
version = "0.1.0"
edition = "2021"
authors = ["AbdulmalikDS <af.alquwayfili@gmail.com>"]
description = "A lightweight, local-first semantic search engine for personal notes"
license = "MIT"
repository = "https://github.com/AbdulmalikDS/notes2vec"
keywords = ["search", "semantic", "notes", "vector", "embeddings"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
# CLI Framework
clap = { version = "4.5", features = ["derive"] }

# TUI Interface
ratatui = "0.27"
crossterm = "0.28"

# File System Operations
notify-debouncer-full = "0.3"
ignore = "0.4"

# Text Processing
pulldown-cmark = "0.10"
serde_yaml = "0.9"

# Machine Learning & Embeddings
candle-core = "0.4"
candle-transformers = "0.4"
candle-nn = "0.4"
hf-hub = "0.4"
tokenizers = "0.19"

# State Management & Vector Storage
redb = "1.3"

# Utilities
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
dirs = "5.0.1"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "notes2vec"
path = "src/main.rs"

